eks-service/15-node-exporter-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-exporters-prometheus-node-exporter
  namespace: ops
spec:
  type: NodePort
  ports:
  - port: 9100
    targetPort: 9100
    nodePort: 30709
