eks-service/9-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: shoply
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/incheon-soda/shoply-gateway:otel
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: shoply
spec:
  selector:
    app: api-gateway
  ports:
  - port: 4000
    targetPort: 4000
